# django-playground

./: .gitignore  Dockerfile  README.md  aliases.sh  docker-compose.yml  pyproject.toml
src/drf_quickstart/: apps.py
src/polls/: admin.py  tests.py  views.py
src/polls/migrations/: 0001_initial.py
src/snippets/: admin.py  models.py  serializers.py  urls.py  views.py
src/snippets/migrations/: 0001_initial.py
src/tutorial/: settings.py  urls.py  utils.py
